<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Tiêu đề sản phẩm -->
    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ti_u_s_n_ph_m"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        android:layout_marginBottom="16dp"
        tools:ignore="Autofill,VisualLintTextFieldSize" />


    <!-- Mô tả sản phẩm -->
    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/m_t_s_n_ph_m"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <!-- Giá sản phẩm -->
    <EditText
        android:id="@+id/etPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gi_s_n_ph_m"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <!-- Danh mục sản phẩm -->
    <Spinner
        android:id="@+id/spCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp" />

    <!-- Tình trạng sản phẩm -->
    <Spinner
        android:id="@+id/spCondition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp" />

    <!-- Hiển thị vị trí sản phẩm -->
    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/v_tr_s_n_ph_m"
        android:paddingTop="8dp"/>

    <!-- Nút lưu sản phẩm -->
    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l_u_s_n_ph_m"/>

</LinearLayout>

